# gtma

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  generate.sh
include/gtma/: audio.h  graphics.h  gtma.h  physics.h  scenes.h  util.h  window.h
src/: Camera.c  Camera.h  Config.c  Config.h  Events.c  Events.h  Interface.c  Interface.h  Main.c  Models.c  Models.h  Physics.c  Renderer.c  Renderer.h  Scene.c  Texture.h  Util.c  Util.h  WindowManager.c  WindowManager.h
src/audio/: audio.c  audio.h
src/examplescenes/: circleHallway.c  deansGarden.c  deanshallway.c  gunTest.c  natatorium.c  options.c  outdoor.c  robert.c  testScene1.c  testScene2.c  titleScreen.c  valleyway.c
src/graphics/: camera.c  camera.h  models.c  models.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h
src/init/: main.c
src/levels/: levels.c  levels.h
src/objects/: entities.c  entities.h  objects.c  objects.h  player.c  player.h
src/physics/: physics.c  physics.h
src/scene/: scene.c
src/scenes/: circleHallway.c  deansGarden.c  deansgarden.c  deanshallway.c  editor.c  gunTest.c  levels.h  natatorium.c  objects.c  objects.h  options.c  outdoor.c  player.c  player.h  robert.c  scenes.c  scenes.h  testScene1.c  testScene2.c  titleScreen.c
src/util/: config.c  config.h  diagnostics.c  diagnostics.h  files.c  util.c  util.h
src/window/: events.c  events.h  windowManager.c  windowManager.h
